--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>首页</title>
+    <title>Document</title>
 </head>
 
 <body>
-    这里是首页
+    首页
+    {{用户名}}
+    <a href="registered.html">注册</a>
+    <a href="login.html">登录</a>
 </body>
 
 </html>
